New features have been added to simplify debugging

--- a/Z80/Z80.vcxitems.filters
+++ b/Z80/Z80.vcxitems.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Z80.InitInstructions.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Z80.Debug.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
