--- a/Z80/Z80.vcxitems.filters
+++ b/Z80/Z80.vcxitems.filters
@@ -41,5 +41,29 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Z80.Debug.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Z80.Instructions_Load16.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Z80.Instructions_Exchange.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Z80.Instructions_Arithmetic16.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Z80.Instructions_RotateShift.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Z80.Instructions_Bit.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Z80.Instructions_Jump.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Z80.Instructions_CallReturn.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Z80.Instructions_InputOutput.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
