--- a/Z80/Z80.vcxitems.filters
+++ b/Z80/Z80.vcxitems.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Z80.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)IClockable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MSBuildThisFileDirectory)Z80.cpp">
