--- a/MZEmu/MZEmu.vcxproj
+++ b/MZEmu/MZEmu.vcxproj
@@ -99,6 +99,7 @@
   <ItemGroup>
     <ClCompile Include="AY8910.cpp" />
     <ClCompile Include="GeneralThings.cpp" />
+    <ClCompile Include="KempstonJoystick.cpp" />
     <ClCompile Include="Screen.cpp" />
     <ClCompile Include="Specrtum128kBus.cpp" />
     <ClCompile Include="Specrtum48kBus.cpp" />
@@ -114,6 +115,7 @@
   <ItemGroup>
     <ClInclude Include="AY8910.h" />
     <ClInclude Include="GeneralThings.h" />
+    <ClInclude Include="KempstonJoystick.h" />
     <ClInclude Include="olcNoiseMaker.h" />
     <ClInclude Include="Screen.h" />
     <ClInclude Include="Specrtum128kBus.h" />
